--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "description": "",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js",
     "test": "echo 'Error: no test specified' && exit 1",
